--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Document</title>
   <script src="./utils.js"></script>
 </head>
+<style>
+  .cell {
+    width: 50px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 16px;
+  }
+</style>
 
 <body>
   <h1 id='sortResult'></h1>
