新增插入排序

--- a/selectionSort.html
+++ b/selectionSort.html
@@ -26,7 +26,7 @@
 <script src="./sortFunc.js"></script>
 <script>
   let arr = Utils.generateRandomArray(100, 0, 1000)
-  let result = Sort.selectionSort(arr)
+  let result = Sort.mergeSort(arr)
   Utils.printArray(result)
 
 </script>
